# arb-bot

./: .env.example  .gitignore  Cargo.toml  README.md  arb-bot.logrotate  arb-bot.service  backup_keys.sh  config.example.toml  install.sh  start.sh  stop.sh  update.sh
.cursor/: rules.md
docs/: REPORT_STEP_2.4.md  REPORT_STEP_2.5.md  REPORT_STEP_3.2.md  WEB_STACK_DECISION.md  roadmap.md  Проект арбитражного бота.txt
scripts/: arb-bot.logrotate  arb-bot.service  backup_keys.sh  install.sh  run_demo.sh  start.sh  stop.sh  update.sh
src/: arbitrage.rs  config.rs  dex.rs  lib.rs  main.rs  monitor.rs  wallet.rs
src/web/: auth.rs  handlers.rs  mod.rs  server.rs  state.rs  websocket.rs
static/: app.js  index.html  script.js  styles.css
tests/: DEVNET_TESTING_SUMMARY.md  README_DEVNET.md  devnet_test.rs  extended_integration_test.rs  integration_test.rs  mocks.rs  security_test.rs  stress_test.rs
web/: index.html  main.js  style.css
