[package]
name = "arb-bot"
version = "1.0.0"
edition = "2021"
authors = ["Arb Bot Team"]

[dependencies]
# Solana SDK для взаимодействия с блокчейном
solana-sdk = "1.17"
solana-client = "1.17"
solana-transaction-status = "1.17"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Сериализация/десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Логирование
log = "0.4"
env_logger = "0.11"

# Работа с окружением
dotenv = "0.15"

# HTTP клиент для RPC
reqwest = { version = "0.11", features = ["json"] }

# Математика для расчётов
rust_decimal = "1.33"

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Криптография
bs58 = "0.5"

[dev-dependencies]
# Тестирование
mockito = "1.2"

[profile.release]
# Оптимизация для продакшн
opt-level = 3
lto = true
codegen-units = 1