[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"
authors = ["Arb Bot Team"]
description = "Арбитражный бот для Solana"
license = "MIT"

[dependencies]
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
toml = "0.8"
dotenv = "0.15"

# Decimal для финансовых расчётов
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Crypto
bs58 = "0.5"

# Utilities
chrono = "0.4"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "compression-gzip", "fs", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Authentication
base64 = "0.21"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "arb-bot"
path = "src/main.rs"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
futures = "0.3"

